--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -10,10 +10,11 @@
     {%  include 'includes/_navbar.html' %}
 
     <div class = "container">
+      {%  include 'includes/_messages.html' %}
       {% block content %}
       {%  endblock %}
     </div>
-    
+
     {% block footer %}
       &copy; Copyright 2019 by <a href="#">BaronKimaru</a>.
     {% endblock %}
