--- a/src/templates/includes/_navbar.html
+++ b/src/templates/includes/_navbar.html
@@ -28,9 +28,17 @@
         <a class="nav-link disabled" href="#">Link</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
+    <form class="form-inline my-2 mr-5 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
       <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
     </form>
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="/register">Login</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/register">Register</a>
+      </li>
+    </ul>
   </div>
 </nav>
